# terraform-vault-development

./: .env  .gitignore  Makefile  README.md
cli/: Makefile  README.md
cli/bash/: newcli
cli/python/: pyproject.toml
cli/python/src/mycli/: __init__.py  foward.py  my_cli.py
vault/: main.tf  provider.tf  team_admins.tf  variables.tf
vault/modules/approle/: main.tf
vault/modules/aws/: main.tf  outputs.tf  variables.tf
vault/modules/psql/: main.tf  outputs.tf  variables.tf
vault/modules/secrets/: main.tf
vault/modules/user/: main.tf  variables.tf
