[build-system]

requires = ["setuptools>=61.0"]

build-backend = "setuptools.build_meta"


[project]

name = "mycli"

#dynamic = ["version"]
version = "0.0.3"

maintainers = [
  { name="Felipe Rocha", email="felipefonsecarocha@gmail.com" },
]

description = "MY Framewok to manage other tools and platform"

readme = "README.md"

requires-python = ">=3.8"

dependencies = [
'hvac; python_version >= "3.8"',
'paramiko; python_version >= "3.8"',
'boto3; python_version >= "3.8"',
'forward; python_version >= "3.8"',
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
"Homepage" = "https://www.feliperocha.systems"
"Bug Tracker" = "https://jira.com"

[project.scripts]
mycli = "mycli:main"

[project.entry-points.console_scripts]
mycli = "mycli:main"

#[tool.setuptools.dynamic]
#version = {file = "mycli.VERSION"}